Disconnecting from migration-tooling
Now uses an interface for resolver